--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,6 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_upload_photo">UploadPhoto</string>
-
+    <string name="title_activity_edit_profile">EditProfileActivity</string>
 
 </resources>
