New changes. New graph, comment, background, volley

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,13 @@
 <resources>
-    <string name="app_name">Idex</string>
+    <string name="app_name">quixotc</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="userInfo_edit">Edit Info</string>
     <string name="facebook_app_id">990811460986304</string>
     <string name="frag1">Frag 1</string>
-    <string name="info">We live in the age of start\-ups, yet the American Dream 9\-5 paradigm still exists.
+    <string name="info">We live in the age of start\-ups, yet the American Dream 9 to 5 paradigm still exists.
     People have ideas but don\'t have means, opportunity or risk appetite. Many start ups exhaust their cash
-    on manufacturing and customer acquisition before reaching the investor phase. QIX removes inherent
+    on manufacturing and customer acquisition before reaching the investor phase. QUIXOTC removes inherent
     start\-up risk by focusing on real value in intangible ideas and create a social beta market.</string>
     <string name="frag3">Frag 3</string>
     <string name="menu1">Item 1</string>
@@ -23,5 +23,6 @@
     <string name="title_activity_edit_profile">EditProfileActivity</string>
     <string name="continueNoLogIn"><u>Continue without logging in</u></string>
     <string name="MenuSignUp">SignUp</string>
+    <string name="comment">Comment...</string>
 
 </resources>
