Sound, new buttons, last 100 clicks, log roll info navigation buttons

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
-    <string name="app_name">quixotc</string>
+    <string name="app_name">InnGen</string>
+    <string name="app_title">innGen</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="userInfo_edit">Edit Info</string>
