added bottom banner

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="frag1">Frag 1</string>
     <string name="info">We live in the age of start\-ups, yet the American Dream 9 to 5 paradigm still exists.
     People have ideas but don\'t have means, opportunity or risk appetite. Many start ups exhaust their cash
-    on manufacturing and customer acquisition before reaching the investor phase. QUIXOTC removes inherent
+    on manufacturing and customer acquisition before reaching the investor phase. InnGen removes inherent
     start\-up risk by focusing on real value in intangible ideas and create a social beta market.</string>
     <string name="frag3">Frag 3</string>
     <string name="menu1">Item 1</string>
